@@ -1,21 +1,33 @@
 MEQ in general:
 
-  * BUG: RES_UPDATED gets propagated, should it?
+  * CRITICAL BUG: If spigot is created implicitly (via nested init-records), 
+    it does not get added to the data mux!!! Same goes for loading a forest.
+    Time to rethink this whole I/O business -- tie it to forest.
+    
+  * BUG: Initial Resolve.Children too inefficient in the case of a large set of
+    interlinked solve trees (the singular solver causes everything to be 
+    repeated over and over again). If cache would apply itself properly to 
+    command results, that would solve the whole problem. Think this through.
+    And what about symdep propagation? Same thing, really.
 
-  * BUG: assigning children record using a=,b= does not insure order.
-    Should it?
-  
+  * BUG: assigning requestIDs in VisDataMux: should be consistent with symdeps
+    Add knowledge of symdeps to MeqServer itself
+
   * BUG: Sink does not handle a fail-result gracefully. Or does it?
+    Actually, we need to regularize this whole fail business.
   
-  * BUG: Condeq cannot handle spids but no pert sets?
-    (this is really a malformed result -- added exception)
-  
-  * BUG: If spigot is created implicitly (via nested init-records), it does not
-    get added to the data mux!!! Maybe it's time to rethink this whole I/O
-    business?
-    (I.e. tie it to forest?)
-
   * Better ways to check for a running meqserver?
+    Check esp. when the pipe exists and a debugger is running --
+    I think -nostart, if given, should override everything
+  
+      + BUG: RES_UPDATED gets propagated, should it?
+        11/07/04: no, fixed, cleared from cached code
+      + BUG: Condeq cannot handle spids but no pert sets?
+        10/07/05: this is really a malformed result -- added exception
+      + BUG: assigning children record using a=,b= does not insure order.
+        Should it?
+        11/07/05: fixed. See new DataList class, and dmi.list (aka meq.list)
+        function, which ensures order. Old way is now deprecated.
 
   * new name for Polc? Maybe Fitfunc? Repfunc?
     Funklet!!
